--- a/WebContent/m_userLogin.html
+++ b/WebContent/m_userLogin.html
@@ -1,38 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-
-<body>
-
-	<div class="dropdown-menu">
-		<form class="px-4 py-3">
-			<div class="form-group">
-				<label for="exampleDropdownFormEmail1">Email address</label> <input
-					type="email" class="form-control" id="exampleDropdownFormEmail1"
-					placeholder="email@example.com">
-			</div>
-			<div class="form-group">
-				<label for="exampleDropdownFormPassword1">Password</label> <input
-					type="password" class="form-control"
-					id="exampleDropdownFormPassword1" placeholder="Password">
-			</div>
-			<div class="form-check">
-				<input type="checkbox" class="form-check-input" id="dropdownCheck">
-				<label class="form-check-label" for="dropdownCheck">
-					Remember me </label>
-			</div>
-			<button type="submit" class="btn btn-primary">Sign in</button>
-		</form>
-		<div class="dropdown-divider"></div>
-		<a class="dropdown-item" href="#">New around here? Sign up</a> <a
-			class="dropdown-item" href="#">Forgot password?</a>
-	</div>
-</body>
-</html>
+<div class="dropdown-menu">
+  <form class="px-4 py-3">
+    <div class="form-group">
+      <label for="exampleDropdownFormEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+    </div>
+    <div class="form-group">
+      <label for="exampleDropdownFormPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="********">
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="dropdownCheck">
+      <label class="form-check-label" for="dropdownCheck">
+        Remember me
+      </label>
+    </div>
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </form>
+  <div class="dropdown-divider"></div>
+  <a class="dropdown-item" href="#">New around here? Sign up</a><br />
+  <a class="dropdown-item" href="#">Forgot password?</a>
+</div>
